<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/changeTop"
        style="@style/title_relayout" >

        <Button
            android:id="@+id/changeBack"
            style="@style/back_btn" />

        <TextView
            android:id="@+id/changeBackText"
            style="@style/back_text"
            android:layout_toRightOf="@+id/changeBack" />

        <TextView
            android:id="@+id/changeTitle"
            style="@style/title_text"
            android:text="@string/changepw" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/changeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/login"
        android:src="@drawable/tou" />

    <LinearLayout
        android:id="@+id/changeli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeUser"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/changeId_tx_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/changeId"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/id"
                android:textColorHint="#CDCDC1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/changeIdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:visibility="invisible"
                android:text="@string/id_true"
                android:textColor="#ff0000" />
        </RelativeLayout>
        <LinearLayout
                android:id="@+id/changeline0"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D7D7D7"
                android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
                android:id="@+id/changePassword_tx_li0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            <EditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/oldpasswors"
                    android:inputType="textPassword"
                    android:textColorHint="#CDCDC1"
                    android:textSize="16sp" />

            <TextView
                    android:id="@+id/registerPwText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:visibility="invisible"
                    android:text="@string/id_true"
                    android:textColor="#ff0000" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/changeline"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/changePassword_tx_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/changePassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#CDCDC1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/changePwText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:visibility="invisible"
                android:text="@string/id_true"
                android:textColor="#ff0000" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/changeline1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/turePassword_tx_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/turePassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/truepassword"
                android:inputType="textPassword"
                android:textColorHint="#CDCDC1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/turePwText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/pstrue"
                android:visibility="invisible"
                android:textColor="#ff0000" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/changeline2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D7D7D7"
            android:orientation="vertical" >
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/changeAuth_tx_li"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/changeAuth"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/auth_code"
                android:textColorHint="#CDCDC1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/changeAuthText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:text="@string/autetrue"
                android:visibility="invisible"
                android:textColor="#ff0000" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/changecodeli"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/changeli"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/changeAuthimg"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:contentDescription="@string/changepw" />

        <Button
            android:id="@+id/changeCheck"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/check"
            android:textColor="#00AFEF"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/changeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changecodeli"
        android:layout_margin="20dp"
        android:background="@drawable/btnbg"
        android:includeFontPadding="false"
        android:text="@string/true_change"
        android:textColor="#ffffff" />

</RelativeLayout>